fix responsibility on mobile and correction grammatical errors

--- a/client/src/app/modules/core/pages/about/about.component.scss
+++ b/client/src/app/modules/core/pages/about/about.component.scss
@@ -1,31 +1,44 @@
 #section1 {
   padding-top: 50px;
   width: 700px;
+  max-width: 100%;
+  height: auto;
 }
 
 #section2 {
   padding-top: 50px;
   width: 700px;
+  max-width: 100%;
+  height: auto;
 }
 
 #section3 {
   padding-top: 50px;
   width: 700px;
+  max-width: 100%;
+  height: auto;
 }
 
 #section4 {
   padding-top: 50px;
   width: 700px;
+  max-width: 100%;
+  height: auto;
 }
 
 
 #uvod {
   width: 900px;
+  max-width: 100%;
+  height: auto;
+  //font-size:10vw
 }
 
 #info {
   width: 600px;
   float: left;
+  max-width: 100%;
+  height: auto;
 }
 
 #xml {
@@ -34,5 +47,5 @@
 
 #stk_icon {
   overflow: hidden;
-  padding-left: 50px;
+  //padding-left: 50px;
 }
